--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h1>I'm Stanley Ebuka</h1>
 
             <p class="intro-position">
-              <span>Full-stack Software Engineer • MSc Data Science</span>
+              <span>Software Engineer • MSc Data Science</span>
               <!-- <span>UI/UX Designer</span>  -->
             </p>
 
@@ -162,7 +162,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#127881; <br/>
-              I'm a full-stack software engineer with 4+ years of experience building stuff on the internet. I'm currently transitioning into data science through an MSc in the field. When I'm not working, you'll find me watching Arsenal play football, traveling, trying new cuisines, or going down rabbit holes on YouTube. Stick around to explore my work and see what I've been building! &#127940
+              I'm a software engineer with 4+ years of experience building stuff on the internet. I'm currently transitioning into data science through an MSc in the field. When I'm not working, you'll find me watching Arsenal play football, traveling, trying new cuisines, or going down rabbit holes on YouTube. Stick around to explore my work and see what I've been building! &#127940
               <!-- I'm a self taught Full-stack software engineer. Building microservices for high
               availability, scalability, resilience, and security. I Love
               solving problems and learning recent technologies, especially in
@@ -238,7 +238,7 @@
             >Contact Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1f7H1w7TWEtLUQGwvZal2dUW5ek5czHp-/view?usp=drive_link"
+            href="https://drive.google.com/file/d/1XuHco8DLRQEj-ief1lFm2TdB-n0Kbw81/view?usp=sharing"
             target="_blank"
             title="Download CV"
             class="button button-primary"
@@ -296,6 +296,29 @@
                   • Implemented comprehensive unit tests using RSpec, resulting in a significant increase in test coverage from 75% to 84%, ensuring more thorough and reliable code validation. <br />
                   • Proficiently employed advanced reverse engineering methodologies by utilizing cutting-edge tools such as Proximan, Frida, apk-mitm, jadx GUI, GraphQL introspection, and Android ADB to integrate understanding of software architectures.<br />
                   • Implement unit tests using RSpec
+                </p>
+              </div>
+            </div>
+            <div class="timeline-block">
+              <div class="timeline-ico">
+                <img
+                  style="border-radius:50%;"
+                  src="images/omdena logo.jpeg"
+                  alt=""
+                  srcset=""
+                />
+              </div>
+
+               <div class="timeline-header">
+                <h3>Junior Machine Learning Engineer</h3>
+                <p>Feb 2025 - May 2025</p>
+              </div>
+
+              <div class="timeline-content">
+                <h4>Omdena</h4>
+                <h6 style="font-size: 0.7em;">📍 Remote </h6>
+                <p>
+                  • Contributed to building an AI-Powered Legal Complaince Automation Assistant
                 </p>
               </div>
             </div>
