--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                 <a class="smoothscroll" href="#resume" title="">Resume</a>
               </li>
               <li>
+                <a class="smoothscroll" href="#blog" title="">Blog</a>
+              </li>
+              <li>
                 <a class="smoothscroll" href="#portfolio" title="">Portfolio</a>
               </li>
               <li>
@@ -162,15 +165,7 @@
 
             <p class="lead">
               Hey there! Welcome to my portfolio &#127881; <br/>
-              I'm a software engineer with 4+ years of experience building stuff on the internet. I'm currently transitioning into data science through an MSc in the field. When I'm not working, you'll find me watching Arsenal play football, traveling, trying new cuisines, or going down rabbit holes on YouTube. Stick around to explore my work and see what I've been building! &#127940
-              <!-- I'm a self taught Full-stack software engineer. Building microservices for high
-              availability, scalability, resilience, and security. I Love
-              solving problems and learning recent technologies, especially in
-              web and mobile development. Most of my experience is based on
-              back-end and front-end web development. I Love to write clean
-              tested code meant to be read by humans not machines, also
-              well-designed simple architectures that can be easily understood
-              by anyone. -->
+              I'm a software engineer with 4+ years of experience building stuff on the internet. I'm currently completing a double degree master's in Data Science and Marketing, focusing on the applications of Machine Learning in market research. When I'm not working, you'll find me watching Arsenal play football, traveling, trying new cuisines, or going down rabbit holes on YouTube. Stick around to explore my work and see what I've been building! &#127940
             </p>
           </div>
         </div>
@@ -289,7 +284,7 @@
 
               <div class="timeline-content">
                 <h4>Helicarrier</h4>
-                <h6 style="font-size: 0.7em;">📍 Remote · USA</h6>
+                <h6 style="font-size: 0.7em;">📍 Remote · California, USA</h6>
                 <p>
                   • Optimized the fraud detection and management systems on both Sendcash and Buycoins Pro platforms, enhancing security measures and ensuring more robust fraud prevention. <br />
                   • Enhanced the order-matching engine algorithm to leverage Go concurrency, resulting in a remarkable 10% reduction in latency.<br />
@@ -382,7 +377,7 @@
             </div>
             <!-- /timeline-block -->
 
-            <div class="timeline-block">
+            <!-- <div class="timeline-block">
               <div class="timeline-ico">
                 <img
                   style="border-radius:50%;"
@@ -409,7 +404,7 @@
                 </p>
               </div>
             </div>
-            <!-- /timeline-block -->
+            /timeline-block -->
 
             <div class="timeline-block">
               <div class="timeline-ico">
@@ -531,6 +526,29 @@
     </section>
     <!-- /features -->
 
+    <!-- Blog Section
+   ================================================== -->
+    <section id="blog">
+      <div class="row section-intro">
+        <div class="col-twelve">
+          <h5>Blog</h5>
+          <h1>Latest Articles From Medium</h1>
+        </div>
+      </div>
+      <!-- /section-intro-->
+
+      <div class="row blog-content">
+        <div class="col-twelve">
+          <div id="blog-posts" class="blog-wrapper">
+            <div class="blog-loading">
+              <p>Loading articles...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /blog -->
+
     <!-- Portfolio Section
    ================================================== -->
     <section id="portfolio">
@@ -538,7 +556,6 @@
         <div class="col-twelve">
           <h5>Portfolio</h5>
           <h1>Check Out Some of My Works.</h1>
-          <!-- <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p> -->
         </div>
       </div>
       <!-- /section-intro-->
@@ -1161,7 +1178,7 @@
 
         <div class="col-eight tab-full">
           <div class="copyright">
-            <span>© Copyright 2025 </span>
+            <span>© Copyright 2026 </span>
             <span>Chemical Stan</span>
           </div>
         </div>
@@ -1184,5 +1201,6 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/medium-blog.js"></script>
   </body>
 </html>
