Add grey background for blog

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               </div>
 
               <div class="timeline-content">
-                <h4>Omdena</h4>
+                <h4>Omdena - Volunteer</h4>
                 <h6 style="font-size: 0.7em;">📍 Remote </h6>
                 <p>
                   • Contributed to building an AI-Powered Legal Complaince Automation Assistant
@@ -551,11 +551,11 @@
 
     <!-- Portfolio Section
    ================================================== -->
-    <section id="portfolio">
+    <section id="portfolio" class="grey-section">
       <div class="row section-intro">
         <div class="col-twelve">
           <h5>Portfolio</h5>
-          <h1>Check Out Some of My Works.</h1>
+          <!-- <h1>Check Out Some of My Works.</h1> -->
         </div>
       </div>
       <!-- /section-intro-->
