--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             >Contact Me</a
           >
           <a
-            href="https://drive.google.com/file/d/1XuHco8DLRQEj-ief1lFm2TdB-n0Kbw81/view?usp=sharing"
+            href="https://drive.google.com/file/d/1eQ9ApM8d9pI5NBLw0Zo8kgms7lxCw3SJ/view?usp=sharing"
             target="_blank"
             title="Download CV"
             class="button button-primary"
@@ -286,11 +286,15 @@
                 <h4>Helicarrier</h4>
                 <h6 style="font-size: 0.7em;">📍 Remote · California, USA</h6>
                 <p>
-                  • Optimized the fraud detection and management systems on both Sendcash and Buycoins Pro platforms, enhancing security measures and ensuring more robust fraud prevention. <br />
-                  • Enhanced the order-matching engine algorithm to leverage Go concurrency, resulting in a remarkable 10% reduction in latency.<br />
-                  • Implemented comprehensive unit tests using RSpec, resulting in a significant increase in test coverage from 75% to 84%, ensuring more thorough and reliable code validation. <br />
-                  • Proficiently employed advanced reverse engineering methodologies by utilizing cutting-edge tools such as Proximan, Frida, apk-mitm, jadx GUI, GraphQL introspection, and Android ADB to integrate understanding of software architectures.<br />
-                  • Implement unit tests using RSpec
+                  • Engineered and managed distributed systems using Golang and Ruby on Rails microservices for cross-border payments infrastructure processing $400K+ monthly volume. <br />
+                  • Designed asynchronous, event-driven communication between microservices using BullMQ and Google Pub/Sub, improving throughput, fault tolerance, and service decoupling under high load. <br />
+                  • Enhanced the order-matching engine algorithm to leverage Golang concurrency, reducing latency by 10%. <br />
+                  • Optimized the fraud detection pipelines across YaraCash and SendCash ensuring robust fraud prevention. <br />
+                  • Integrated Thresh0ld for cryptocurrency transaction management and deployed smart contracts to support on-chain transaction bundling using account abstraction (Turnkey, ZeroDev). <br />
+                  • Implemented comprehensive unit tests using RSpec and Jest, increasing test coverage from 75% to 84%. <br />
+                  • Integrated global fiat on-/off-ramps (Stripe, Paystack, Flutterwave, Mercuryo) and implemented zkp2p onramp service using zero-knowledge proofs (zk-TLS), improving transaction reliability and user flexibility. <br />
+                  • Employed advanced reverse engineering methodologies using Proximan, Frida, apk-mitm, jadx GUI, GraphQL introspection, & Android ADB to integrate third-party platforms and improve security. <br />
+                  • Involved in technical design sessions and code reviews to ensure architectural consistency across teams.
                 </p>
               </div>
             </div>
@@ -305,7 +309,7 @@
               </div>
 
                <div class="timeline-header">
-                <h3>Junior Machine Learning Engineer</h3>
+                <h3>Machine Learning Engineer</h3>
                 <p>Feb 2025 - May 2025</p>
               </div>
 
@@ -313,7 +317,7 @@
                 <h4>Omdena - Volunteer</h4>
                 <h6 style="font-size: 0.7em;">📍 Remote </h6>
                 <p>
-                  • Contributed to building an AI-Powered Legal Complaince Automation Assistant
+                  • Contributed to building Redactable, an AI-Powered Legal Compliance Automation Assistant that uses optical character recognition (OCR) to identify and redact PII
                 </p>
               </div>
             </div>
@@ -364,7 +368,7 @@
                 <h4>UpliftHub </h4>
                 <h6 style="font-size: 0.7em;">📍 Remote · Bauchi, Nigeria</h6>
                 <p>
-                  • I Led a team of 4 software engineers in increasing system reliability by up to 70% by primarily decomposing existing monolithic applications into microservices using Node.js and Express.js <br />
+                  • Improved system reliability by up to 70% by primarily decomposing existing monolithic applications into microservices using Node.js and Express.js <br />
                   • Sharing responsibilities with team members to build and
                   support in-house school managementsoftware used in production
                   today by over 21 schools across Nigeria. <br />
