Update portfolio URLs

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
 
               <div class="link-box">
                 <a
-                  href="https://pro.buycoins.africa/about"
+                  href="https://www.instagram.com/buycoinsafrica/?hl=en"
                   target="_blank"
                   >Official Website</a
                 >
@@ -831,7 +831,7 @@
 
               <div class="link-box">
                 <a
-                  href="https://app.sendcash.africa/"
+                  href="https://www.yara.cash/"
                   target="_blank"
                   >Official Website</a
                 >
